# runic

./: AGENTS.md  Cargo.toml  README.md
src/: app.rs  main.rs  setup.rs
src/config/: AGENTS.md  chains.toml  keychain.rs  mod.rs  settings.rs
src/contracts/: AGENTS.md  abi.rs  caller.rs  deployment.rs  mod.rs
src/project/: AGENTS.md  detector.rs  foundry.rs  hardhat.rs  mod.rs
src/scripts/: AGENTS.md  mod.rs  runner.rs
src/ui/: AGENTS.md  config.rs  home.rs  interact.rs  mod.rs  scripts.rs
src/ui/components/: input.rs  list.rs  mod.rs
